force-app/main/default/src/objects/EmailMessage/fields/Care_Plan_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Care_Plan_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Care Plan Created Date</label>
    <type>DateTime</type>
</CustomField>