force-app/main/default/src/objects/EmailMessage/fields/MVN_Message_Filter__c.field-meta.xml
<CustomField>
    <fullName>MVN_Message_Filter__c</fullName>
    <description>Used for filtering email messaging for reporting.</description>
    <label>Message Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>