force-app/main/default/src/objects/EmailMessage/fields/MVN_Program__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program__c</fullName>
    <formula>Parent.PJN_Program_DeveloperName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>