force-app/main/default/src/objects/EmailMessage/fields/PJN_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Adverse_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the email message to an AE</description>
    <inlineHelpText>Relates the email message to an AE</inlineHelpText>
    <label>Adverse Event</label>
    <referenceTo>PJN_Adverse_Event__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>PJN_Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>