force-app/main/default/src/objects/EmailMessage/fields/PJN_Product_Quality_Complaint__c.field-meta.xml
<CustomField>
    <fullName>PJN_Product_Quality_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the email to a PQC</description>
    <inlineHelpText>Relates the email to a PQC</inlineHelpText>
    <label>Product Quality Complaint</label>
    <referenceTo>PJN_Product_Quality_Complaint__c</referenceTo>
    <relationshipLabel>Email Messages</relationshipLabel>
    <relationshipName>PJN_Email_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>